nullaway_error_E5DA6E21-8073-428D-BDBF-414D6249B3D4.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-test/src/main/java/org/springframework/test/context/transaction/TransactionalTestExecutionListener.java:422: error: [NullAway] dereferenced expression rollback is @Nullable
			boolean defaultRollback = rollback.value();
			                                  ^
    (see http://t.uber.com/nullaway )
